--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -9,6 +9,7 @@
 
 h1, h2, p {
     color: white;
+
 }
 
 h1{
@@ -26,6 +27,7 @@ p {
 p:first-child {
     font-size: 34px;
     font-weight: bold;
+    margin-bottom: 0;
 }
 
 .hero{
@@ -49,4 +51,6 @@ p:first-child {
     text-decoration: none;
     font-size: 18px;
     opacity: 0.8;
+    line-height: 27px;
+    display: inline-block;
 }
