--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,56 +1,136 @@
-
 :root {
-    --Heading-font: 'Playfair Display', serif;
-    --secondary-font: 'Poppins', sans-serif;
-    --primary-color:  #233b6e;
-    --secondary-color:  #f81f67;
+  --Heading-font: "Playfair Display", serif;
+  --secondary-font: "Poppins", sans-serif;
+  --primary-color: #233b6e;
+  --secondary-color: #f81f67;
 }
 
-
-h1, h2, p {
-    color: white;
-
+h1,
+h2,
+h3,
+h4 {
+  font-family: var(--Heading-font);
 }
 
-h1{
-    font-family: var(--Heading-font);
-    font-weight: bold;
-    font-size: 88px;
+h1 {
+  font-weight: bold;
+  font-size: 88px;
+}
+
+h2 {
+  font-size: 54px;
+  margin-bottom: 30px;
+  color: var(--primary-color);
 }
 
 p {
-    font-family: var(--secondary-font);
-    font-weight: normal;
-    font-size: 18px;
+  font-family: var(--secondary-font);
+  font-weight: normal;
+  font-size: 18px;
 }
 
-p:first-child {
-    font-size: 34px;
-    font-weight: bold;
-    margin-bottom: 0;
+.hero {
+  background-color: var(--primary-color);
+  text-align: center;
+  padding: 150px 20px;
+  color: white;
 }
 
-.hero{
-    background-color:var(--primary-color); 
-    text-align: center;
-    padding: 150px 20px;
+.hero p:first-child {
+  font-size: 34px;
+  font-weight: bold;
+  margin-bottom: 0;
 }
 
 #description {
-    font-size: 28px;
-    letter-spacing: 1px;
-    line-height: 2;
-   text-shadow: 2px 2px 3px var(--secondary-color);
+  font-size: 28px;
+  letter-spacing: 1px;
+  line-height: 2;
+  text-shadow: 2px 2px 3px var(--secondary-color);
 }
 
 .button {
-    background-color:var(--secondary-color);
-    padding: 15px 25px;
-    border-radius: 4px;
-    color: white;
-    text-decoration: none;
+  background-color: var(--secondary-color);
+  padding: 15px 25px;
+  border-radius: 4px;
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  opacity: 0.9;
+  line-height: 27px;
+  display: inline-block;
+}
+
+#project-section {
+  background-color: #f5f5f7;
+}
+
+#project-section p:first-child {
+  padding: 36px 0;
+  font-size: 26px;
+  text-align: center;
+  color: var(--primary-color);
+}
+
+#project-section p {
+  color: black;
+  opacity: 0.7;
+  font-size: 16px;
+  line-height: 30px;
+}
+
+.project-description {
+  padding: 110px 60px;
+}
+
+.button-outline {
+  margin-top: 30px;
+  background-color: none;
+  padding: 15px 30px;
+  border: 1px solid var(--secondary-color);
+  border-radius: 4px;
+  color: var(--secondary-color);
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 27px;
+  display: inline-block;
+}
+
+@media (max-width: 992px) {
+  .hero {
+    padding: 70px 10px 50px;
+  }
+
+  h1 {
+    font-size: 52px;
+    line-height: 1.5;
+  }
+
+  h2 {
+    font-size: 44px;
+    margin-bottom: 20px;
+    color: var(--primary-color);
+  }
+
+  .hero p:first-child {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 0;
+  }
+
+  #description {
     font-size: 18px;
-    opacity: 0.8;
-    line-height: 27px;
-    display: inline-block;
+    letter-spacing: 1px;
+    line-height: 2;
+  }
+  #project-section p:first-child {
+    padding: 25px 0 5px;
+    font-size: 18px;
+    text-align: center;
+    color: var(--primary-color);
+  }
+  .project-description {
+    padding: 30px 15px;
+    text-align: center;
+  }
 }
