--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -50,6 +50,7 @@ p {
 }
 
 .button {
+  font-family: var(--secondary-font);
   background-color: var(--secondary-color);
   padding: 15px 25px;
   border-radius: 4px;
@@ -96,6 +97,33 @@ p {
   display: inline-block;
 }
 
+#about-section {
+  padding: 150px 20px;
+  color: black;
+}
+
+#about-section h1 {
+  font-size: 60px;
+  line-height: 1.3;
+}
+#about-section h2 {
+  font-size: 18px;
+  font-family: var(--secondary-font);
+  margin: 30px 0;
+  font-weight: bold;
+}
+#about-section p {
+  font-family: var(--secondary-font);
+  font-size: 16px;
+  line-height: 1.9;
+  font-weight: normal;
+  margin-bottom: 36px;
+}
+
+#about-content {
+  margin: 30px;
+}
+
 @media (max-width: 992px) {
   .hero {
     padding: 70px 10px 50px;
@@ -133,4 +161,29 @@ p {
     padding: 30px 15px;
     text-align: center;
   }
+  #about-section {
+    padding: 0;
+    text-align: center;
+  }
+
+  #about-section h1 {
+    font-size: 62px;
+    color: black;
+    line-height: 1.2;
+  }
+  #about-section h2 {
+    font-size: 18px;
+    font-family: var(--secondary-font);
+    font-weight: bold;
+  }
+  #about-section p {
+    font-family: var(--secondary-font);
+    font-size: 16px;
+    line-height: 1.8;
+    font-weight: normal;
+    margin-bottom: 36px;
+    padding: 0 10px;
+    
+  }
+
 }
