--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -6,9 +6,8 @@
 }
 
 h1,
-h2,
-h3,
-h4 {
+h2
+ {
   font-family: var(--Heading-font);
 }
 
@@ -27,6 +26,14 @@ p {
   font-family: var(--secondary-font);
   font-weight: normal;
   font-size: 18px;
+}
+
+h3{
+    font-family: var(--secondary-font);
+    font-size: 24px;
+    font-weight: bold;
+      color: black;
+
 }
 
 .hero {
@@ -97,22 +104,23 @@ p {
   display: inline-block;
 }
 
-#about-section {
+.content-container {
   padding: 150px 20px;
-  color: black;
 }
 
-#about-section h1 {
+.content h1 {
+  color: black;
   font-size: 60px;
   line-height: 1.3;
 }
-#about-section h2 {
+.content h2 {
   font-size: 18px;
   font-family: var(--secondary-font);
   margin: 30px 0;
   font-weight: bold;
 }
-#about-section p {
+.content p {
+  color: black;
   font-family: var(--secondary-font);
   font-size: 16px;
   line-height: 1.9;
@@ -120,8 +128,14 @@ p {
   margin-bottom: 36px;
 }
 
-#about-content {
+.content {
   margin: 30px;
+}
+
+#work-section p{
+  font-size: 14px;
+  opacity: 0.7;
+  font-weight: 400;
 }
 
 @media (max-width: 992px) {
@@ -161,22 +175,21 @@ p {
     padding: 30px 15px;
     text-align: center;
   }
-  #about-section {
+  .content-container {
     padding: 0;
     text-align: center;
   }
 
-  #about-section h1 {
+  .content h1 {
     font-size: 62px;
-    color: black;
     line-height: 1.2;
   }
-  #about-section h2 {
+  .content h2 {
     font-size: 18px;
     font-family: var(--secondary-font);
     font-weight: bold;
   }
-  #about-section p {
+  .content p {
     font-family: var(--secondary-font);
     font-size: 16px;
     line-height: 1.8;
