--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -132,9 +132,8 @@ h3{
   margin: 30px;
 }
 
-#work-section p{
+#work-section p, #contact-section p{
   font-size: 14px;
-  opacity: 0.7;
   font-weight: 400;
 }
 
