--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -232,6 +232,9 @@ footer .social-links a:hover {
   background-color: var(--primary-color);
   transform: translateY(-5px);
 }
+button {
+  border: none;
+}
 
 @media (max-width: 992px) {
   .hero {
@@ -303,5 +306,10 @@ footer .social-links a:hover {
     padding: 30px 20px;
     background-color: #f5f5f7;
     text-align: center;
+  }
+  #contact-section h4{
+    text-align: center;
+    display: flex;
+    justify-content: center;
   }
 }
