--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -61,9 +61,11 @@ p {
   text-shadow: 2px 2px 3px var(--secondary-color);
 }
 
-.button {
+.button,
+.button-hero {
   font-family: var(--secondary-font);
   background-color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
   padding: 15px 25px;
   border-radius: 4px;
   color: white;
@@ -72,6 +74,12 @@ p {
   opacity: 0.9;
   line-height: 27px;
   display: inline-block;
+}
+
+.button:hover {
+  background-color: unset;
+  color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
 }
 
 #project-section {
@@ -122,7 +130,7 @@ p {
 
 .content h1 {
   color: black;
-  font-size: 60px;
+  font-size: 55px;
   line-height: 1.3;
 }
 .content h2 {
@@ -307,7 +315,7 @@ button {
     background-color: #f5f5f7;
     text-align: center;
   }
-  #contact-section h4{
+  #contact-section h4 {
     text-align: center;
     display: flex;
     justify-content: center;
